# GookZzangBot

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
gook/: Cargo.toml
gook-main/: Cargo.toml
gook-main/src/: main.rs  random_call.rs
gook/src/: lib.rs
src/: main.rs  random_call.rs
